--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -6,6 +6,9 @@
 
             <ion-nav-buttons side="left">
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
                 </button>
             </ion-nav-buttons>
         </ion-nav-bar>
