--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -5,7 +5,7 @@
 
         <ion-list show-delete="shouldShowDelete" can-swipe="listCanSwipe" class="item-text-wrap">
             <ion-item ng-repeat="timercard in timercards" class="accent--button item feed-card timer-card" ng-class="time" on-swipe-left="onLeftSwipe()" on-swipe-right="onRightSwipe()">
-                    <div class="item-avatar-left">
+                    <div class="item-avatar">
                         <i class="ion-icon ion-ios-timer-outline"></i>
                         <h2>{{timercard.title}}</h2>
                         <p>
@@ -27,8 +27,8 @@
         <ion-list show-delete="shouldShowDelete" can-swipe="listCanSwipe" class="item-text-wrap">
             <ion-item ng-repeat="card in cards | orderBy: ['-pinned', '-created']" class="item feed-card" on-swipe-left="onLeftSwipe()" on-swipe-right="onRightSwipe()">
                 <a ng-click="goToCardDetail(card)" href="">
-                    <div class="item-avatar-left">
-                        <i class="ion-icon ion-ios-paper"></i>
+                    <div class="item-avatar">
+                        <i class="ion-icon ion-ios-paper-outline"></i>
                         <h2>
                             <i class="ion-pin pinner" ng-show="{{card.pinned}}"></i>
                             {{card.title}}
