--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -6,19 +6,19 @@
             <div class="content--separator-line"></div>
         </div>
         <div class="padding-div">
-            <p class="text-center">If you have any questions or feedback, please feel free to contact our organising committee. Like us on <a href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><strong>Facebook</strong></a>                and get our latest news and updates in your feed!
+            <p class="text-center">If you have any questions or feedback, please feel free to contact our organising
+                committee. Like us on <a
+                        href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/">Facebook</a>
+                    and get our latest news and updates in your feed!
             </p>
-                <div class="contacts-mail-phone--container">
-                <a href="mailto:info.tallinneudc@debate.ee"><i class="contacts--icon ion-ios-email"></i></a>
-                <a href="tel:+37259051786"><i class="contacts--icon ion-ios-telephone"></i></a>
-                </div>
+            <div class="contacts-mail-phone--container">
+                <a href="mailto:info.tallinneudc@debate.ee"><i class="contacts--icon ion-ios-email-outline"></i></a>
+                <a href="tel:+37259051786"><i class="contacts--icon ion-ios-telephone-outline"></i></a>
+            </div>
         </div>
 
         <div class="padding-div text-center">
-
-            <h4>
-                <strong>Registration information</strong>
-            </h4>
+            <h4>Registration information</h4>
             <p>
                 <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
             </p>
@@ -26,95 +26,83 @@
 
 
         <div class="padding-div text-center">
-
-            <h4>
-                <strong>Equity team</strong>
-            </h4>
+            <h4>Equity team</h4>
             <p>
                 <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
             </p>
         </div>
 
         <div class="padding-div text-center">
-
-            <h4>
-                <strong>Language team</strong>
-            </h4>
+            <h4>Language team</h4>
             <p>
                 <a href="mailto:TallinnLanguage@gmail.com">TallinnLanguage@gmail.com</a>
             </p>
         </div>
 
         <div class="padding-div text-center">
-            <p>
-                <b>Project Manager</b>
-            </p>
-            <img src="./img/selene_photo.jpg" />
-            <h4>
-                <strong>Selene Gnadenteich</strong>
-            </h4>
-            <p>
-                <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
-            </p>
+            <h3 class="title">Organizers</h3>
+        </div>
+
+        <div class="padding-div text-center">
+            <div class="contacts__person">
+                <img src="./img/selene_photo.jpg"/>
+                <h4 class="contacts__person-name">Selene Gnadenteich</h4>
+                <p class="contacts__person-title">Project Manager</p>
+                <p>
+                    <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
+                </p>
+            </div>
         </div>
         <div class="content--separator-line-xs"></div>
         <div class="padding-div text-center">
-            <p>
-                <b>Sponsors</b>
-            </p>
-            <img src="./img/olesja_photo.jpg" />
-            <h4>
-                <strong>Olesja Zorina</strong>
-            </h4>
-            <p>               
-                <a href="mailto:tallinneudc@debate.ee">tallinneudc@debate.ee</a>
-            </p>
+            <div class="contacts__person">
+                <img src="./img/olesja_photo.jpg"/>
+                <h4 class="contacts__person-name">Olesja Zorina</h4>
+                <p class="contacts__person-title">Sponsors</p>
+                <p>
+                    <a href="mailto:tallinneudc@debate.ee">tallinneudc@debate.ee</a>
+                </p>
+            </div>
         </div>
 
         <div class="content--separator-line-xs"></div>
         <div class="padding-div text-center">
-            <p>
-                <b>Equity officer</b>
-            </p>
-            <img src="./img/margo_photo.jpeg" />
-            <h4>
-                <strong>Margo Loor</strong>
-            </h4>
-            <p>
-                <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
-            </p>
+            <div class="contacts__person">
+                <img src="./img/margo_photo.jpeg"/>
+                <h4 class="contacts__person-name">Margo Loor</h4>
+                <p class="contacts__person-title">Equity officer</p>
+                <p>
+                    <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+                </p>
+            </div>
         </div>
 
         <div class="content--separator-line-xs"></div>
         <div class="padding-div text-center">
-            <p>
-                <b>Equity officer</b>
-            </p>
-            <img src="./img/kallina_photo.jpg" />
-            <h4>
-                <strong>Kallina Basli</strong>
-            </h4>
-            <p>
-                <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
-            </p>
+            <div class="contacts__person">
+                <img src="./img/kallina_photo.jpg"/>
+                <h4 class="contacts__person-name">Kallina Basli</h4>
+                <p class="contacts__person-title">Equity officer</p>
+                <p>
+                    <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+                </p>
+            </div>
         </div>
 
         <div class="content--separator-line-xs"></div>
         <div class="padding-div text-center">
-            <p>
-                <b>Equity officer</b>
-            </p>
-            <img src="./img/daan_photo.jpg" />
-            <h4>
-                <strong>Daan Welling</strong>
-            </h4>
-            <p>
-                <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
-            </p>
+            <div class="contacts__person">
+                <img src="./img/daan_photo.jpg"/>
+                <h4 class="contacts__person-name">Daan Welling</h4>
+                <p class="contacts__person-title">Equity officer</p>
+                <p>
+                    <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+                </p>
+            </div>
         </div>
 
-        <div class="padding-div">
-            <h3 class="title text-center" style="position:relative;padding-top:50px;">Feedback & Questions</h3>
+        <div class="padding-div text-center">
+            <h3 class="title">Feedback & Questions</h3>
             <div class="content--separator-line"></div>
         </div>
         <div class="padding-div">
@@ -122,10 +110,13 @@
                 <textarea rows="6" placeholder="Send Question" ng-model="feedback.content"></textarea>
             </label>
         </div>
-        <button ng-click="sendFeedback()" ng-disabled="!feedback.content" class="custom-button button button-full btn-full-half">Send</button>
+        <button ng-click="sendFeedback()" ng-disabled="!feedback.content"
+                class="custom-button button button-full btn-full-half">Send
+        </button>
         <div class="padding-div contacts-social--container">
             <a href="http://tallinneudc.com/"><i class="contacts--icon ion-earth"></i></a>
-            <a href="facebook://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><i class="contacts--icon ion-social-facebook"></i></a>
+            <a href="facebook://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><i
+                    class="contacts--icon ion-social-facebook"></i></a>
             <a href="instagram://user?username=tallinneudc2017"><i class="contacts--icon ion-social-instagram"></i></a>
         </div>
 
