--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -70,7 +70,7 @@
             <div class="contacts__person">
                 <img src="./img/margo_photo.jpeg"/>
                 <h4 class="contacts__person-name">Margo Loor</h4>
-                <p class="contacts__person-title">Equity officer</p>
+                <p class="contacts__person-title">Equity Officer</p>
                 <p>
                     <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
                 </p>
@@ -82,7 +82,7 @@
             <div class="contacts__person">
                 <img src="./img/kallina_photo.jpg"/>
                 <h4 class="contacts__person-name">Kallina Basli</h4>
-                <p class="contacts__person-title">Equity officer</p>
+                <p class="contacts__person-title">Equity Officer</p>
                 <p>
                     <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
                 </p>
@@ -94,7 +94,7 @@
             <div class="contacts__person">
                 <img src="./img/daan_photo.jpg"/>
                 <h4 class="contacts__person-name">Daan Welling</h4>
-                <p class="contacts__person-title">Equity officer</p>
+                <p class="contacts__person-title">Equity Officer</p>
                 <p>
                     <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
                 </p>
