--- a/www/templates/badgeView.html
+++ b/www/templates/badgeView.html
@@ -32,3 +32,9 @@
 
     </ion-content>
 </ion-view>
+
+<!--
+<div class="item item-avatar">
+    <div id="footer-logo-div"><img id="footer-logo" src="{{ logoUrl }}"></div>
+</div>
+-->
