--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -2,7 +2,7 @@
     <div class="card-detail-view-bg"></div>
     <ion-content>
         <div class="list card item-content">
-            <div class="item item-avatar" style="background-image: url('https://source.unsplash.com/category/nature')"></div>
+            <div class="item item-avatar" style="background-image: url('https://source.unsplash.com/480x360/?nature,water')"></div>
 
             <div class="item item-body">
 
