--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -106,9 +106,7 @@
             <div class="content--separator-line"></div>
         </div>
         <div class="padding-div">
-            <label class="item item-input">
-                <textarea rows="6" placeholder="Send Question" ng-model="feedback.content"></textarea>
-            </label>
+            <textarea rows="6" class="item item-input" placeholder="Ask something..." ng-model="feedback.content"></textarea>
         </div>
         <button ng-click="sendFeedback()" ng-disabled="!feedback.content"
                 class="custom-button button button-full btn-full-half">Send
@@ -117,7 +115,7 @@
             <a href="http://tallinneudc.com/"><i class="contacts--icon ion-earth"></i></a>
             <a href="facebook://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><i
                     class="contacts--icon ion-social-facebook"></i></a>
-            <a href="instagram://user?username=tallinneudc2017"><i class="contacts--icon ion-social-instagram"></i></a>
+            <a href="instagram://user?username=tallinneudc2017"><i class="contacts--icon ion-social-instagram-outline"></i></a>
         </div>
 
         <div class="padding-div text-center">
