--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -4,19 +4,18 @@
         <div id="about" data-tap-disabled="true"></div>
         <div class="content">
             <div class="padding">
-                <h3 class="text-center">Tallinn EUDC</h3>
-                <div class="content--separator-line"></div>
-                <h4 class="text-center" style="margin-top: 35px;">Important information</h4>
-                <div class="about-points">
-                    <i class="contacts--icon ion-calendar"></i>
-                    <i class="contacts--icon ion-lightbulb"></i>
-                    <i class="contacts--icon ion-briefcase"></i>
-                    <i class="contacts--icon ion-person"></i>
-                    <i class="contacts--icon ion-power"></i>
+                <div class="padding-div text-center">
+                    <h3>Tallinn EUDC</h3>
+                    <div class="about-points">
+                        <i class="contacts--icon ion-calendar"></i>
+                        <i class="contacts--icon ion-lightbulb"></i>
+                        <i class="contacts--icon ion-briefcase"></i>
+                        <i class="contacts--icon ion-person"></i>
+                        <i class="contacts--icon ion-power"></i>
+                    </div>
                 </div>
-                <div class="about--content-paragraph_container">
-                    <h2 class="text-center">Opening Words</h2>
-                    <div class="content--separator-line"></div>
+                <div class="about--content-paragraph_container text-center">
+                    <h2>Opening Words</h2>
                     <p class="pragraph">It is our great pleasure to welcome you to the European Universities Debating
                         Championship 2017! Tallinn EUDC will take place from 14 – 20 August 2017 in Tallinn University
                         of Technology (TTU) which is the only campus-type university in the Baltic countries and one of
@@ -31,62 +30,62 @@
                     </p>
                     <img class="fit-img" src="./img/Zeit_Debatte_Wien_-_Finale-02.jpg" alt="dabate image"/>
                     <h3 class="text-center">The European University Debating Championships</h3>
-                        <div class="content--separator-line-xs"></div>
-                        <p class="pragraph">
-                            The European Universities Debating Championship (EUDC) is an annual tournament in which
-                            debating societies from Universities across Europe compete. The first championship took
-                            place in Rotterdam in 1999, when EUDC was a 32 team tournament with only a handful
-                            universities participating. Since then the competition has grown steadily and Tallinn EUDC
-                            is expected to host a total of 230 teams from all over the continent.
+                    <div class="content__separator-line-xs"></div>
+                    <p class="pragraph">
+                        The European Universities Debating Championship (EUDC) is an annual tournament in which
+                        debating societies from Universities across Europe compete. The first championship took
+                        place in Rotterdam in 1999, when EUDC was a 32 team tournament with only a handful
+                        universities participating. Since then the competition has grown steadily and Tallinn EUDC
+                        is expected to host a total of 230 teams from all over the continent.
+                    </p>
+                    <h3 class="text-center">University Debating</h4>
+                        <div class="content__separator-line-xs"></div>
+                        <p class="pragraph">In competitive university debating students train their argumentative
+                            skills as well as their general knowledge and rhetorical abilities. Students hold
+                            speeches on current topics and try to convince judges of their stance. The most
+                            prevalent format (British Parliamentary Format) imitates the debates taking place in the
+                            Lower House of the British Parliament. Eight competitors in teams of two argue either
+                            for or against a motion which is revealed fifteen minutes before the debate begins.
+                            There are four positions which each team is randomly assigned to. Although two teams
+                            will argue for and two teams will argue against, each team must bring a unique case in
+                            order to explain why their side is right. Speeches last seven minutes and alternate
+                            between sides, with those arguing for the motion going first. Experienced adjudicators
+                            decide whose arguments were more persuasive and give feedback for the students to
+                            improve. The best debaters compete at huge competitions such as the European
+                            Championship.
                         </p>
-                        <h3 class="text-center">University Debating</h4>
-                            <div class="content--separator-line-xs"></div>
-                            <p class="pragraph">In competitive university debating students train their argumentative
-                                skills as well as their general knowledge and rhetorical abilities. Students hold
-                                speeches on current topics and try to convince judges of their stance. The most
-                                prevalent format (British Parliamentary Format) imitates the debates taking place in the
-                                Lower House of the British Parliament. Eight competitors in teams of two argue either
-                                for or against a motion which is revealed fifteen minutes before the debate begins.
-                                There are four positions which each team is randomly assigned to. Although two teams
-                                will argue for and two teams will argue against, each team must bring a unique case in
-                                order to explain why their side is right. Speeches last seven minutes and alternate
-                                between sides, with those arguing for the motion going first. Experienced adjudicators
-                                decide whose arguments were more persuasive and give feedback for the students to
-                                improve. The best debaters compete at huge competitions such as the European
-                                Championship.
-                            </p>
-                            <p class="pragraph">
-                                Since the teams do not get more than fifteen minutes preparation time for each debate,
-                                debaters gather vast amounts of general knowledge in order to prevail in the debates.
-                                The speeches do not only train the students’ eloquence and public speaking but also
-                                hones their ability to logically analyse arguments. The judges assess speeches based
-                                primarily on the depth of explanation as well as the speaker’s delivery style. Debating
-                                is therefore seen as valuable training for ambitious students who utilise these skills
-                                in their future careers as well as their present studies. Debating teaches students to
-                                think critically and maintain an awareness of current issues. The debates usually relate
-                                to current issues faced by the European Union, governments, individuals or corporations.
-                                And as a result, debaters are exposed to a broad range of opinions on issues as diverse
-                                as war and social justice. Therefore debating is vital ‘school of democracy’ for future
-                                decision makers.
-                            </p>
-                            <p class="pragraph">
-                                University debaters worldwide build a strong international network. All over the world,
-                                debating is seen as one of the most powerful tools of education and the international
-                                debating community is strongly connected across borders. In general, debating and
-                                Tallinn EUDC foster cultural exchange and understanding between students in Europe and
-                                beyond.
-                            </p>
-                            <p class="final">
-                            <h4>Search for more:</h4>
-                            <div>
-                                <a href="http://idebate.org/">International Debate Association (IDEA)</a>
-                            </div>
-                            <div>
-                                <a href="https://en.wikipedia.org/wiki/European_Universities_Debating_Championship">EUDC
-                                    Wikipedia
-                                    Page</a>
-                            </div>
-                            </p>
+                        <p class="pragraph">
+                            Since the teams do not get more than fifteen minutes preparation time for each debate,
+                            debaters gather vast amounts of general knowledge in order to prevail in the debates.
+                            The speeches do not only train the students’ eloquence and public speaking but also
+                            hones their ability to logically analyse arguments. The judges assess speeches based
+                            primarily on the depth of explanation as well as the speaker’s delivery style. Debating
+                            is therefore seen as valuable training for ambitious students who utilise these skills
+                            in their future careers as well as their present studies. Debating teaches students to
+                            think critically and maintain an awareness of current issues. The debates usually relate
+                            to current issues faced by the European Union, governments, individuals or corporations.
+                            And as a result, debaters are exposed to a broad range of opinions on issues as diverse
+                            as war and social justice. Therefore debating is vital ‘school of democracy’ for future
+                            decision makers.
+                        </p>
+                        <p class="pragraph">
+                            University debaters worldwide build a strong international network. All over the world,
+                            debating is seen as one of the most powerful tools of education and the international
+                            debating community is strongly connected across borders. In general, debating and
+                            Tallinn EUDC foster cultural exchange and understanding between students in Europe and
+                            beyond.
+                        </p>
+                        <p class="final">
+                        <h4>Search for more:</h4>
+                        <div>
+                            <a href="http://idebate.org/">International Debate Association (IDEA)</a>
+                        </div>
+                        <div>
+                            <a href="https://en.wikipedia.org/wiki/European_Universities_Debating_Championship">EUDC
+                                Wikipedia
+                                Page</a>
+                        </div>
+                        </p>
                 </div>
             </div>
         </div>
