--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -690,6 +690,11 @@ ion-header-bar {
 
   &__person {
     max-width: 300px;
+    height: auto;
+    box-shadow: 0 2px 44px 0 rgba(46, 14, 152, 0.18);
+    background: white;
+    margin: 30px auto;
+    padding: 24px;
 
     &:first-of-type {
       margin-top: 0;
